Added distributed_cleanup utility for Federated Reporting
If enabled with cfengine_mp_fr_enable_distributed_cleanup class and on a
Federated Reporting enabled hub, either superhub or feeder, this
policy will collect SSL certificates from all feeder hubs and
collect on the superhub so that API calls may be made securely
from superhub.

The distributed_cleanup.py script must be run manually once to setup needed
distributed_cleanup accounts on all hubs for proper operation. After this setup
the policy will automatically clean up orphaned hosts on feeders
after each import run on the superhub.

Hosts considered orphaned are those that have a newer incoming
timestamp on another feeder.

Ticket: ENT-7215
Changelog: title
(cherry picked from commit f9316756618b03519ff2a6115f16f6b2f45084f0)

--- a/templates/federated_reporting/config.sh.mustache
+++ b/templates/federated_reporting/config.sh.mustache
@@ -4,6 +4,9 @@
 DEFAULT_PREFIX="{{prefix}}"
 DEFAULT_PREFIX="${DEFAULT_PREFIX:-/opt/cfengine/federation/}"
 
+WORKDIR="{{workdir}}"
+WORKDIR="${WORKDIR:-/var/cfengine/}"
+
 # generic configuration
 CFE_BIN_DIR="{{bindir}}"
 CFE_BIN_DIR="${CFE_BIN_DIR:-/var/cfengine/bin}"
@@ -78,3 +81,7 @@ CFE_FR_DB_USER="{{db_user}}"
 CFE_FR_DB_USER="${CFE_FR_DB_USER:-cfpostgres}"
 CFE_FR_HANDLE_DUPLICATES="{{handle_duplicates}}"   # default is no (don't handle duplicates as it adds to time to import)
 CFE_FR_HANDLE_DUPLICATES="${CFE_FR_HANDLE_DUPLICATES:-no}"
+
+# distributed_cleanup dir
+CFE_FR_DISTRIBUTED_CLEANUP_DIR="{{distributed_cleanup_dir}}"
+CFE_FR_DISTRIBUTED_CLEANUP_DIR="${CFE_FR_DISTRIBUTED_CLEANUP_DIR:-$DEFAULT_PREFIX/$CFE_FR_FEEDER_USERNAME/distributed_cleanup}"
