--- a/templates/cf-apache.service.mustache
+++ b/templates/cf-apache.service.mustache
@@ -13,6 +13,7 @@ ExecStop={{{vars.sys.workdir}}}/httpd/bin/apachectl stop
 PIDFile={{{vars.sys.workdir}}}/httpd/logs/httpd.pid
 Restart=always
 RestartSec=10
+UMask=0177
 
 [Install]
 WantedBy=multi-user.target
