Moved httpd.pid to root of httpd workdir
Ticket: ENT-7966
Changelog: Title

--- a/templates/cf-apache.service.mustache
+++ b/templates/cf-apache.service.mustache
@@ -10,7 +10,7 @@ PartOf=cfengine3.service
 Type=forking
 ExecStart={{{vars.sys.workdir}}}/httpd/bin/apachectl start
 ExecStop={{{vars.sys.workdir}}}/httpd/bin/apachectl stop
-PIDFile={{{vars.sys.workdir}}}/httpd/logs/httpd.pid
+PIDFile={{{vars.sys.workdir}}}/httpd/httpd.pid
 Restart=always
 RestartSec=10
 UMask=0177
