--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -6,7 +6,7 @@ ServerTokens ProductOnly
 ServerName {{{vars.sys.fqhost}}}
 ServerRoot "{{{vars.sys.workdir}}}/httpd"
 Listen 80
-PidFile "{{{vars.sys.workdir}}}/httpd/http.pid"
+PidFile "{{{vars.sys.workdir}}}/httpd/httpd.pid"
 
 # Modules
 
