--- a/modules/packages/vendored/msiexec-list.vbs.mustache
+++ b/modules/packages/vendored/msiexec-list.vbs.mustache
@@ -44,7 +44,7 @@ For Each strKey in strKeys
       ' Replace whitespace with dashes for CFEngine
       ' strDisplayNameValue = Replace(strDisplayNameValue, " ", "-")
       ' Print out the DisplayName
-      WScript.Echo "Name=" & LCase(strDisplayNameValue)
+      WScript.Echo "Name=" & strDisplayNameValue
       ' Print out the DisplayVersion
       ' Ensure that Version is set to something, else it can't be inserted into the database.
       If intRet2 <> 0 Then
