Worked around apachectl stop returning before all processes are actually stopped
This change works around the fact that apachectl stop returns before it has
actually completed stopping all httpd processes. A subsequent promise can fail
to re-start apache since there are still active processes. Limited testing
showed that the processes hung around for less than one second, so hopefully a 2
second sleep after issuing stop will be sufficient.

Ticket: ENT-8209
Changelog: Title

--- a/templates/cf-apache.service.mustache
+++ b/templates/cf-apache.service.mustache
@@ -9,7 +9,7 @@ PartOf=cfengine3.service
 [Service]
 Type=forking
 ExecStart={{{vars.sys.workdir}}}/httpd/bin/apachectl start
-ExecStop={{{vars.sys.workdir}}}/httpd/bin/apachectl stop
+ExecStop={{{vars.sys.workdir}}}/httpd/bin/apachectl stop; sleep 2
 PIDFile={{{vars.sys.workdir}}}/httpd/httpd.pid
 Restart=always
 RestartSec=10
