--- a/templates/federated_reporting/config.sh.mustache
+++ b/templates/federated_reporting/config.sh.mustache
@@ -35,6 +35,7 @@ __inventory
 contextcache"
 CFE_FR_TABLES="{{tables}}"
 CFE_FR_TABLES="${CFE_FR_TABLES:-$DEFAULT_TABLES}"
+CFE_FR_PSQL_OPTIONS="" # use '--set "client_min_messages=DEBUG"' to debug SQL errors
 
 # dump phase
 CFE_FR_COMPRESSOR="{{compressor}}"
