--- a/templates/federated_reporting/config.sh.mustache
+++ b/templates/federated_reporting/config.sh.mustache
@@ -58,6 +58,10 @@ CFE_FR_SUPERHUB_IMPORT_DIR="{{import_dir}}"
 CFE_FR_SUPERHUB_IMPORT_DIR="${CFE_FR_SUPERHUB_IMPORT_DIR:-$DEFAULT_PREFIX/superhub/import}"
 CFE_FR_SUPERHUB_LOGIN="{{login}}"
 CFE_FR_SUPERHUB_LOGIN="${CFE_FR_SUPERHUB_LOGIN:-cftransport@superhub}"
+CFE_FR_SUPERHUB_HOSTKEYS="{{superhub_hostkeys}}"
+CFE_FR_SUPERHUB_HOSTKEYS="${CFE_FR_SUPERHUB_HOSTKEYS:-superhubhostkeys}"
+CFE_FR_THIS_HOSTKEY="{{this_hostkey}}"
+CFE_FR_THIS_HOSTKEY="${CFE_FR_THIS_HOSTKEY:-myhostkey}"
 CFE_FR_TRANSPORT_DIR="{{transport_dir}}"
 CFE_FR_TRANSPORT_DIR="${CFE_FR_TRANSPORT_DIR:-$DEFAULT_PREFIX/$CFE_FR_FEEDER_USERNAME/source}"
 CFE_FR_TRANSPORTER="{{transporter}}"
