Used variable for PidFile in httpd.conf
This way, if the path to the pid changes we don't have to tweak the template.
Though we would still need to tweak buildscripts. No need to do so here since
they resolve to same end state.

--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -6,7 +6,7 @@ ServerTokens ProductOnly
 ServerName {{{vars.sys.fqhost}}}
 ServerRoot "{{{vars.sys.workdir}}}/httpd"
 Listen 80
-PidFile "{{{vars.sys.workdir}}}/httpd/httpd.pid"
+PidFile "{{{vars.mission_portal_apache_from_stage.httpd_pid_file}}}"
 
 # Modules
 # Note: Not all modules that are built are loaded.
