--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -168,8 +168,8 @@ LogLevel warn
   # A more secure setting might be:
   # SSLCipherSuite EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH
 
-  # Some versions of SSL and TLS are known to be insecure, so we disable them by default
-  SSLProtocol all -SSLv2 -SSLv3 -TLSv1
+  # The SSL protocol versions allowed
+  SSLProtocol {{{vars.def.cfe_enterprise_mission_portal_apache_sslprotocol}}}
 
   SSLRandomSeed startup builtin
   SSLRandomSeed connect builtin
