--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -194,6 +194,9 @@ LogLevel warn
     SSLEngine on
     SSLCertificateFile "{{{vars.cfe_internal_hub_vars.SSLCertificateFile}}}"
     SSLCertificateKeyFile "{{{vars.cfe_internal_hub_vars.SSLCertificateKeyFile}}}"
+{{^classes.cfe_enterprise_have_SSLCACertificateFile_defined}}
+    SSLCACertificateFile "{{{vars.cfe_internal_hub_vars.SSLCACertificateFile}}}"
+{{/classes.cfe_enterprise_have_SSLCACertificateFile_defined}}
 
     # Enable Strict Transport Security to prevent HTTPS users from
     # accessing http content.
