Adjusted CSP in httpd.conf to suit ACE javascript editor
Ticket: ENT-12010
Changelog: title
(cherry picked from commit 65f36c1a97b6176265bb8750076b010aedc29817)

--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -217,7 +217,7 @@ LogLevel warn
     base-uri 'self'; \
     form-action 'self'; \
     media-src 'self'; \
-    worker-src 'self';"
+    worker-src 'self' blob:;"
 
     <FilesMatch "\.(cgi|shtml|phtml|php)$">
         SSLOptions +StdEnvVars
