--- a/modules/packages/vendored/yum.mustache
+++ b/modules/packages/vendored/yum.mustache
@@ -11,7 +11,7 @@ import re
 
 rpm_cmd = os.environ.get('CFENGINE_TEST_RPM_CMD', "/bin/rpm")
 rpm_quiet_option = ["--quiet"]
-rpm_output_format = "Name=%{name}\nVersion=%{version}-%{release}\nArchitecture=%{arch}\n"
+rpm_output_format = "Name=%{name}\nVersion=%{epoch}:%{version}-%{release}\nArchitecture=%{arch}\n"
 
 yum_cmd = os.environ.get('CFENGINE_TEST_YUM_CMD', "/usr/bin/yum")
 yum_options = ["--quiet", "-y"]
@@ -87,7 +87,16 @@ def get_package_data():
         # Absolute file.
         sys.stdout.write("PackageType=file\n")
         sys.stdout.flush()
-        return subprocess_call([rpm_cmd, "--qf", rpm_output_format, "-qp", pkg_string])
+        process = subprocess_Popen([rpm_cmd, "--qf", rpm_output_format, "-qp", pkg_string], stdout=subprocess.PIPE)
+        (stdoutdata, _) = process.communicate()
+
+        if process.returncode != 0:
+            return process.returncode
+
+        for line in stdoutdata.decode("utf-8").splitlines():
+            sys.stdout.write(line.replace("(none):","") + "\n")
+
+        return 0
     elif re.search("[:,]", pkg_string):
         # Contains an illegal symbol.
         sys.stdout.write(line + "ErrorMessage: Package string with illegal format\n")
@@ -102,7 +111,16 @@ def list_installed():
     # Ignore everything.
     sys.stdin.readlines()
 
-    return subprocess_call([rpm_cmd, "-qa", "--qf", rpm_output_format])
+    process = subprocess_Popen([rpm_cmd, "-qa", "--qf", rpm_output_format], stdout=subprocess.PIPE)
+    (stdoutdata, _) = process.communicate()
+
+    if process.returncode != 0:
+        return process.returncode
+
+    for line in stdoutdata.decode("utf-8").splitlines():
+        sys.stdout.write(line.replace("(none):","") + "\n")
+
+    return 0
 
 
 def list_updates(online):
