Increased timeout for php processing to allow for longer running requests
This was needed especially in the case of a runagent call which depending on the policy server performance and policy execution time can take more than the default apache timeout of 1 minute.

Ticket: ENT-13291
Changelog: title

--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -249,6 +249,9 @@ LogLevel warn
 </IfModule>
 
 
+# Timeout defaults to 60 but that is too short for some operations on slower hub hardware
+Timeout 120
+
 {{#classes.mission_portal_http2_enabled}}
 # Use mod_http2
 LoadModule http2_module modules/mod_http2.so
