Increased timeout for php processing to allow for longer running API requests
This is a reworking of commit in master: 746b830bee2e32014974ce38455915fe41d4e1bb

master has many changes, especially for http2 which are not present in CFEngine < 3.26.

Ticket: ENT-13291
Changelog: title
(cherry picked from commit ada818c6ed45c48af155c961f9ff1ef3c0b28f29)

--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -276,6 +276,7 @@ AddType    application/x-httpd-php-source php{{{vars.cfe_internal_hub_vars.php_v
 </Directory>
 
 <Directory "{{{vars.cfe_internal_hub_vars.docroot}}}/api">
+  Timeout 120 # Increase timeout for the API, especially agent_run. See ENT-13291
 
     Order deny,allow
     AllowOverride None
