Fixed incorrect previous fix for timeout for php processing to allow for longer running API requests (3.24)
Previous ticket: ENT-13291

This fixes a bad cherry pick in ada818c6ed45c48af155c961f9ff1ef3c0b28f29

The timeout will apply for all httpd operations and is set to 2 minutes instead of the default of 1 minute.

Ticket: ENT-13625
Changelog: title
(cherry picked from commit 7fa64131b4df55fe884c3d57283f28013f40c561)

--- a/cfe_internal/enterprise/templates/httpd.conf.mustache
+++ b/cfe_internal/enterprise/templates/httpd.conf.mustache
@@ -249,6 +249,9 @@ AddHandler php{{{vars.cfe_internal_hub_vars.php_version}}}-script       .php
 AddType    application/x-httpd-php-source php{{{vars.cfe_internal_hub_vars.php_version}}}
 
 
+# Timeout defaults to 60 but that is too short for some operations on slower hub hardware
+Timeout 120
+
 <Directory "{{{vars.cfe_internal_hub_vars.public_docroot}}}">
 
     Options -Indexes +FollowSymLinks +MultiViews
@@ -281,7 +284,6 @@ AddType    application/x-httpd-php-source php{{{vars.cfe_internal_hub_vars.php_v
 </Directory>
 
 <Directory "{{{vars.cfe_internal_hub_vars.docroot}}}/api">
-  Timeout 120 # Increase timeout for the API, especially agent_run. See ENT-13291
 
     Order deny,allow
     AllowOverride None
